Fix alignment issue with logo.

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -8,7 +8,7 @@
     @include respond-to($mq-l) {
       float: left;
       position: absolute;
-      top: $baseline-unit*2;
+      top: $baseline-unit*4;
     }
   }
 
